fixed balance and send fuctions

--- a/Blockchain_prototype/ui/public/dashboard_all_denarii_component/dashboard-all-denarii.html
+++ b/Blockchain_prototype/ui/public/dashboard_all_denarii_component/dashboard-all-denarii.html
@@ -3,4 +3,6 @@
     <a href="#" data-target="#request-denarii-modal" data-toggle="modal"  class="denarii-modal">Request Denarii</a>
     <a href="#" data-target="#borrow-denarii-modal" data-toggle="modal"  class="denarii-modal">Borrow Denarii</a>
     <a href="#" data-target="#lend-denarii-modal" data-toggle="modal"  class="denarii-modal">Lend Denarii</a>
+
+    <a href="#" data-target="#mint-modal" data-toggle="modal"  class="denarii-modal">Mine</a>
 </div>
