--- a/Blockchain_prototype/ui/dashboard.html
+++ b/Blockchain_prototype/ui/dashboard.html
@@ -195,28 +195,9 @@
                     <div id="dashboard-inner-left-container" class="d-lg-flex">
                         <div class="dashboard-component-main-wrapper dashboard-recet-transactions-main-wrapper" style="margin-right: 8px;width: 40%;">
     <h4 class="dashboard-detail-heading d-flex justify-content-between">Recent Transactions <a href="#" class="signed-balance-navigation">View All</a></h4>
-    <div class="dashboard-recent-transaction-list-wrap">
-                <!--@foreach($user->transactions as $transaction)-->
-        <div class="dashboard-recent-transaction-list-item d-flex justify-content-between align-items-center">
-            <span class="dashboard-recent-transaction-list-value-wrap d-flex flex-column">
-                <span class="dashboard-recent-transaction-value"><!--${{number_format($transaction->amount)}}--></span>
-                <span class="dashboard-recent-transaction-value" style="font-size: 12px;">Email ID: <!--{{$transaction->username->email}}--></span>
-                <span class="dashboard-wallet-label dashboard-recent-transaction-date">
-                   <!-- {{date('d M y', strtotime($transaction->created_at))}}, ID: {{$transaction->id}}--></span>
-            </span>
-                           <!-- @if($transaction->status == '1')-->
-                            <span class="dashboard-recent-transaction-list-status">Send</span>
-                           <!-- @elseif($transaction->status == '2')-->
-                            <span class="dashboard-recent-transaction-list-status">Request Sent</span>
-                           <!-- @elseif($transaction->status == '3')-->
-                            <span class="dashboard-recent-transaction-list-status">Credit</span>
-                            <!--@elseif($transaction->status == '4')-->
-                            <span class="dashboard-recent-transaction-list-status">Request</span>
-                            <!--@endif-->
-        </div>
-        <!--@endforeach --> 
 
-    </div>
+
+    
 </div>
 
                         <div id="dashboard_minting_component"></div>  
@@ -671,7 +652,8 @@
             },
             beforeMount() {
         this.onLoadWallet();
-        }
+        this.onLoadData();
+       }
 
         })
     </script>
