got transactions to display, mining working and sending funds works

--- a/Blockchain_prototype/ui/dashboard.html
+++ b/Blockchain_prototype/ui/dashboard.html
@@ -195,17 +195,29 @@
                     <div id="dashboard-inner-left-container" class="d-lg-flex">
                         <div class="dashboard-component-main-wrapper dashboard-recet-transactions-main-wrapper" style="margin-right: 8px;width: 40%;">
     <h4 class="dashboard-detail-heading d-flex justify-content-between">Recent Transactions <a href="#" class="signed-balance-navigation">View All</a></h4>
-                       
+                       <p> this worked </p>
                         <div class="card" v-for="(data, index) in loadedData">
 
                             <div class="card-header">
                                 <h5 class="mb-0">
                                     <button class="btn btn-link" type="button" @click="showElement === index ? showElement = null : showElement = index">
-                                        Transaction #{{ index }}
+                                        Transaction #{{ index}}
                                     </button>
                                 </h5>
                             </div>
-                        </div>
+                            <div  class="collapse" :class="{show: showElement === index}">
+                                <div class="card-body">
+                                    <div class="list-group">
+                                        <div class="list-group-item flex-column align-items-start">
+                                            <div>Sender: {{ data.sender }}</div>
+                                            <div>Recipient: {{ data.recipient }}</div>
+                                            <div>Amount: {{ data.amount }}</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                       </div>
+                        <p> something is really wrong </p>
            
 </div>
 
@@ -520,6 +532,7 @@
                 dataLoading: false,
                 showElement: null,
                 error: null,
+                transout: 'haha',
                 success: null,
                 funds: 0,
                 outgoingTx: {
@@ -631,6 +644,8 @@
                         });
                 },
                 onLoadData: function () {
+                    var vm = this
+                    vm.transout = "called method"
                     if (this.view === 'chain') {
                         // Load blockchain data
                         var vm = this
@@ -647,14 +662,17 @@
                     } else {
                         // Load transaction data
                         var vm = this
+
                         axios.get('/transactions')
                             .then(function (response) {
                                 vm.openTransactions = response.data
                                 vm.dataLoading = false
+                                vm.error = "no errors, we good"
+                                vm.transout = "got my data"
                             })
                             .catch(function (error) {
                                 vm.dataLoading = false
-                                vm.error = 'Something went wrong.'
+                                vm.error = 'Something went wrong with transactions.'
                             });
                     }
                 }
