--- a/Blockchain_prototype/ui/node.html
+++ b/Blockchain_prototype/ui/node.html
@@ -171,8 +171,8 @@
                                     <p>Previous Hash: {{ data.previous_hash }}</p>
                                     <div class="list-group">
                                         <div v-for="tx in data.transactions" class="list-group-item flex-column align-items-start">
-                                            <div>Sender2: {{ tx.sender }}</div>
-                                            <div>Recipient1: {{ tx.recipient }}</div>
+                                            <div>Sender: {{ tx.sender }}</div>
+                                            <div>Recipient: {{ tx.recipient }}</div>
                                             <div>Amount: {{ tx.amount }}</div>
                                         </div>
                                     </div>
